--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=sistem-mahasiswa-backend
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Sesuaikan port dan nama databasenya
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.url=jdbc:postgresql://localhost:5432/mahasiswa
 # username postgres
 spring.datasource.username=postgres
 # password postgres
